included nfs network tests to network_test_nfs target.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -50,7 +50,8 @@ ms_glob_dir(NfsClient ${NfsSourcesDir}/client "Nfs Client")
 ms_glob_dir(NfsVault ${NfsSourcesDir}/vault "Nfs Vault")
 ms_glob_dir(NfsTests ${NfsSourcesDir}/tests Tests)
 set(NfsTestsMain ${NfsSourcesDir}/tests/tests_main.cc)
-set(NfsNetworkTestsAllFiles ${NfsSourcesDir}/tests/data_getter_test.cc ${NfsTestsMain})
+set(NfsNetworkTestsAllFiles ${NfsSourcesDir}/tests/data_getter_test.cc ${NfsTestsMain}
+                            ${NfsSourcesDir}/tests/maid_node_nfs_test.cc ${NfsTestsMain})
 set(NfsWeeklyTestsAllFiles ${NfsSourcesDir}/tests/maid_node_nfs_test.cc ${NfsTestsMain})
 list(REMOVE_ITEM NfsTestsAllFiles ${NfsNetworkTestsAllFiles} ${NfsWeeklyTestsAllFiles})
 list(APPEND NfsTestsAllFiles ${NfsTestsMain})
